Fixed jumping scrollbar, formatting CSS

--- a/yiiCombo/frontend/assets/yii2-sii-file-mgr.css
+++ b/yiiCombo/frontend/assets/yii2-sii-file-mgr.css
@@ -1,25 +1,29 @@
 /**
- * @author Center of Excellence for Bioinformatics Research
- * This is the yii2-sii-file-mgr css
- * Styles Frontend
+* @author Center of Excellence for Bioinformatics Research
+* This is the yii2-sii-file-mgr css
+* Styles Frontend
 */
 
-/*------------------------------------------------------------------
-[Table of contents]
+    /*----------------------------------------------
+     [[ Table of contents ]] 
+     (Ctrl+c any section and Ctrl+f to search)
+     1. General
+     2. Homepage
+     3. Projects Tab
+        a. PT General
+        b. PT Sorter
 
-1. General
-    a. Body / body
-    b. Buttons / .btn
-    c. Pagination / .pagination
-    d. Header 1 / h1
-2. Homepage
-    a. 
     
--------------------------------------------------------------------*/
+    -----------------------------------------------*/
+
+
+/* 1. General               
+=================================================================*/
 
 body {
     font-family: 'IBM Plex Sans Condensed', sans-serif;   
 }
+
 .btn {
     font-family: 'IBM Plex Sans', sans;   
     border: none;
@@ -34,26 +38,41 @@ h1 {
     font-weight: 500;
 }
 
-/* HOMEPAGE               
+body::-webkit-scrollbar {
+    width: 1em;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: rgba(255, 255, 255, 0);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(193, 225, 243);
+  outline: 1px solid slategrey;
+}
+
+
+/* 2. Homepage 
 =================================================================*/
-img#sii-splash-image {
+
+img#sii-splash-image { /* "Center of Excellence ...Research" logo and text*/
 	max-width: 100%;
 	min-width: 437 px;
 	height: auto;
 }
 
-h4#sii-dynam {
+h4#sii-dynam { /* "A dynamic inter-collegiate ...platform" text */
     padding-bottom: 30px;
     color: white;
 }
 
-.spacer {
+.spacer { /* Centers splash page elements */
     width: 100%;
     height: 100px;
     text-align: center!important
 }
 
-#sii-sciencebg {
+#sii-sciencebg { /* Background image */
     background-image: url("../../../../common/images/web_background.jpg");
     /*
       https://ichemepresident.files.wordpress.com/2014/10/zebrafish.jpg
@@ -76,7 +95,7 @@ h4#sii-dynam {
     left: 0;
 }
 
-.gradientBg{
+.gradientBg{ /* Subtle radial gradient, helps contrast white text */
     background: rgb(0,0,0);
     background: radial-gradient(at top, rgba(0,0,0,.6) 2%, rgba(252,70,107,0) 60%);
     width: 100%;
@@ -87,7 +106,11 @@ h4#sii-dynam {
     left: 0;
 }
 
-.sii-filename-elips {
+
+/* 3. Projects Tab              
+=================================================================*/
+
+.sii-filename-elips { /* Project card title */
 	width:auto;
     white-space:nowrap;
     overflow:hidden;
@@ -95,7 +118,7 @@ h4#sii-dynam {
     font-family: 'IBM Plex Sans', sans-serif;   
 }
 
-.sii-fileimage-icon {
+.sii-fileimage-icon { /* Project card title */
     height: 10em;
     background-size: cover;
     background-position:center;
@@ -103,44 +126,49 @@ h4#sii-dynam {
     cursor: pointer;
 }
 
-a.glyphicon { /* Access Files & Request Access tile icons */
-  height: 2em;
-  vertical-align: middle;  
-  float: left;
-}
+/* a. PT General              
+-------------------------------------------------*/
 
-
-/* PROJECTS TAB               
-=================================================================*/
-
-/*  Project Sorter                 
------------------------------------------------------------------*/
-div#w0.list-view ul.sorter {
+div#w0.list-view ul.sorter { /* Project sort bar */
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #eee;
-}
-
-div#w0.list-view ul.sorter li {
-    float: left;
-    border-right:1px solid #eee;
-}
-
-div#w0.list-view ul.sorter li:last-child {
-    border-right: none;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto 1fr;
 }
 
 div#w0.list-view ul.sorter li a {
     display: block;
     color: black;
-    text-align: center;
-    padding: 14px 16px;
+    padding: 1em;
     text-decoration: none;
-    width:8.5em;
-    font-weight: 500;
+    width: 8.5em;
     font-family: 'IBM Plex Sans Condensed', sans-serif;   
+}
+
+ul.sorter li a:after {
+    content: "\e093";
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    font-family: 'Glyphicons Halflings';
+    font-style: normal;
+    font-weight: normal;
+    line-height: 1;
+    padding-left: 5px;
+    color: rgba(21, 104, 119, 0);
+}
+
+div#w0.list-view ul.sorter li a.asc:after {
+    content:"\e093";
+    color: rgba(21, 104, 119);
+}
+
+div#w0.list-view ul.sorter li a.desc:after {
+    content:"\e094";
+    color: rgba(21, 104, 119);
 }
 
 div#w0.list-view ul.sorter li a:hover:not(.active) {
@@ -172,28 +200,66 @@ div#w0.list-view ul.sorters .active {
     padding-bottom: .6em;
 }
 
-/* Description Modal                
+/* Project Description Modal                
 -----------------------------------------------------------------*/
 
-.modalBox{
+.activeModal{
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    grid-template-rows: 1fr auto 3fr;
+    padding-bottom: 0px;
+    padding-top: 50px;
+    overflow-x: hidden;
+}
+
+#modalClick{
+    grid-column: 1 / span 3;
+    grid-row: 1 / span 3;
+    color: whitesmoke;
+    background-color: rgba(34, 25, 165, 0.699);
+    overflow: hidden;
+    min-height: 100%;
+    height: 50vh;
+    width: 100vw;
+    position: absolute;
+    /* only fills viewport height, pls fix */
+}
+
+#modalClick2{
+    grid-column: 1 / span 3;
+    grid-row: 3;
+    color: whitesmoke;
+    background-color: rgba(165, 25, 100, 0.699);
+    min-height: 100%;
+    width: 100vw;
+    height: 25vh;
+    position: absolute;
+    overflow: hidden;
+}
+
+
+.modalBox{ /* Modal layout */
     min-height: 20em;
     border-radius: 15px;
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: auto auto auto;
-    padding: 1.5em 1.5em;
+    grid-column: 2;
+    grid-row: 2;
+    padding: 1.5em 1.5em;/*
+    margin-top: 2em;*/
+    top: 2em;
+
 }
 
-/* Modal Project Name */
-.modalHeader > h2{
+.modalHeader > h2{ /* Modal Project Name */
     margin-bottom: -.20em;
     font-family: 'IBM Plex Sans', sans;     
     font-weight: 600;
     font-size: 1.5em;
 }
 
-/* Modal System */
-.modalHeader > h3{
+.modalHeader > h3{ /* Modal System */
     margin-bottom: -.15em;
     font-family: 'IBM Plex Sans Condensed', sans;     
     font-weight: 600;
@@ -263,14 +329,6 @@ hr {
 .closeX:hover{
     color: rgb(168, 18, 18);
 }
-/*
-.modalFooter{
-    min-height: 2em; 
-    flex-shrink: 0;
-    padding: .2em;
-    border-radius: 0px 0px 25px 25px;
-    background-color: #eee;
-}*/
 
 .svgicon{
     text-decoration: none;
@@ -289,18 +347,13 @@ hr {
     color: rgb(14, 87, 170);
 }
 
-.activeModal{
-    display: block;
-}
-
 /* Icon and link that appears on project tile modal */
 .modalIcon{
     color: rgb(116, 116, 116);
     text-decoration: none;
     align-self: flex-start;
     padding: .5em;
-    border: 1px solid rgba(8, 105, 216, 0);
-    
+    border: 1px solid rgba(8, 105, 216, 0);   
 }
 
 .modalIcon:hover, 
@@ -342,10 +395,6 @@ hr {
     padding: 1em 1em;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: flex-end;
     margin-bottom: -1em;
-}
-
-.activeModal{
-    display: block;
 }
